# tosic-plugin

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
crates/tosic-plugin/: Cargo.toml
crates/tosic-plugin-core/: Cargo.toml
crates/tosic-plugin-core/examples/: async_runtime.rs  sync_runtime.rs
crates/tosic-plugin-core/src/: error.rs  lib.rs  prelude.rs
crates/tosic-plugin-core/src/managers/: mod.rs  multi.rs  single.rs
crates/tosic-plugin-core/src/traits/: host_function.rs  manager.rs  mod.rs  runtime.rs
crates/tosic-plugin-core/src/traits/host_function/: async_fn.rs  mod.rs
crates/tosic-plugin-core/src/types/: context.rs  mod.rs  source.rs  value.rs
crates/tosic-plugin-core/src/types/context/: mod.rs  registry.rs
crates/tosic-plugin-deno-runtime/: Cargo.toml
crates/tosic-plugin-deno-runtime/examples/: async.rs  example.rs  multi_runtime.rs  sync.rs
crates/tosic-plugin-deno-runtime/js-example/: index.js
crates/tosic-plugin-deno-runtime/src/: lib.rs  plugin.rs  prelude.rs  runtime.rs
crates/tosic-plugin-deno-runtime/src/plugin/: async_plugin.rs  mod.rs  sync_plugin.rs
crates/tosic-plugin/src/: lib.rs  prelude.rs
docs/: BUILD_SYSTEM.md  CROSS_COMPILATION.md  DEVELOPMENT.md  SECURITY.md  WORKFLOWS.md
just/: build.just  cross.just  docs.just  lint.just  test.just  util.just
