[package]
name = "tosic-plugin-core"
description = "Core abstractions and traits for the tosic-plugin system."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
async-trait = { workspace = true, optional = true }
cfg-if = "1.0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

[features]
default = []
async = ["async-trait"]
