[package]
name = "tosic-plugin-core"
description = "Core abstractions and traits for the tosic-plugin system."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
async-trait = { workspace = true, optional = true }
cfg-if = "1.0.3"
serde.workspace = true
serde_json.workspace = true
inventory = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

[features]
default = ["global-registry"]
async = ["async-trait"]
global-registry = ["inventory"]
