[package]
name = "tosic-plugin-deno-runtime"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tosic-plugin-core.workspace = true

# runtime
rustyscript = "0.12.3"
serde_json.workspace = true

# async support
#async-trait = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
glob = "0.3.3"

[features]
default = []
async = ["tosic-plugin-core/async", "tokio"]
