[package]
name = "tosic-plugin"
description = "The main entry point for the tosic-plugin system, this contains all tools needed to use the system and build new runtiems and managers."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tosic-plugin-core.workspace = true

# Built-in runtimes
tosic-plugin-deno-runtime = { workspace = true, optional = true }

[features]
default = []
async = ["tosic-plugin-core/async"]
all = ["deno-runtime"]

deno-runtime = ["tosic-plugin-deno-runtime"]
